[gd_scene load_steps=6 format=2]

[ext_resource path="res://Game/Datapacks/UI/DatapackBrowser.gd" type="Script" id=1]
[ext_resource path="res://Game/UI/Util/SmartScrollContainer.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Titillium-Regular.otf" type="DynamicFontData" id=3]


[sub_resource type="DynamicFont" id=1]
size = 38
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.458824 )

[node name="ModBrowser" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="HTTPRequestMod" type="HTTPRequest" parent="."]

[node name="HTTPRequestPreview" type="HTTPRequest" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Control" type="Control" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 5.0
rect_min_size = Vector2( 0, 5 )

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 9.0
margin_right = 1280.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
text = "Datapack Browser"
align = 1

[node name="CloseButton" type="Button" parent="VBoxContainer/Label"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -15.5
margin_right = 120.0
margin_bottom = 16.5
text = "Close"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 52.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 425.0
margin_bottom = 668.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 418.0
margin_bottom = 661.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer"]
margin_right = 411.0
margin_bottom = 14.0
text = "All available datapacks"
align = 1

[node name="HFlowContainer" type="HFlowContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 411.0
margin_bottom = 38.0

[node name="SortNameButton" type="Button" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/HFlowContainer"]
margin_right = 96.0
margin_bottom = 20.0
text = "Sort by name"

[node name="SortNewestFirstButton" type="Button" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/HFlowContainer"]
margin_left = 100.0
margin_right = 189.0
margin_bottom = 20.0
text = "Newest first"

[node name="SortOldestFirstButton" type="Button" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/HFlowContainer"]
margin_left = 193.0
margin_right = 277.0
margin_bottom = 20.0
text = "Oldest first"

[node name="DatapackSearch" type="LineEdit" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 411.0
margin_bottom = 66.0
max_length = 256
placeholder_text = "Search Datapack..."

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 411.0
margin_bottom = 654.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="ModList" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/ScrollContainer"]
margin_right = 411.0
margin_bottom = 584.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/ScrollContainer/ModList"]
margin_right = 411.0
margin_bottom = 31.0
text = "
LOADING DATAPACK LIST"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 429.0
margin_right = 1280.0
margin_bottom = 668.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 851.0
margin_bottom = 668.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 844.0
margin_bottom = 661.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HFlowContainer" type="HFlowContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer"]
margin_right = 837.0
margin_bottom = 30.0

[node name="DownloadModButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/HFlowContainer"]
margin_right = 79.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
text = "Download!"

[node name="PreviewDownloadingImage" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer"]
visible = false
margin_top = 34.0
margin_right = 837.0
margin_bottom = 238.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/PreviewDownloadingImage"]
margin_left = 7.0
margin_top = 95.0
margin_right = 830.0
margin_bottom = 109.0
text = "Loading preview image.."
align = 1

[node name="PreviewTextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer"]
visible = false
margin_top = 34.0
margin_right = 837.0
margin_bottom = 239.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
expand = true
stretch_mode = 6

[node name="OpenFullButton" type="TextureButton" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/PreviewTextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer"]
margin_top = 34.0
margin_right = 837.0
margin_bottom = 654.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true

[node name="DownloadingContrainer" type="PanelContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 2 )

[node name="Label" type="Label" parent="DownloadingContrainer"]
margin_top = 353.0
margin_right = 1280.0
margin_bottom = 367.0
text = "Downloading..."
align = 1

[node name="MessageDialog" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -226.5
margin_top = -79.0
margin_right = 226.5
margin_bottom = 79.0
dialog_autowrap = true

[node name="FullTextureRect" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 6

[node name="CloseFullButton" type="TextureButton" parent="FullTextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[connection signal="visibility_changed" from="." to="." method="_on_ModBrowser_visibility_changed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="request_completed" from="HTTPRequestMod" to="." method="_on_HTTPRequestMod_request_completed"]
[connection signal="request_completed" from="HTTPRequestPreview" to="." method="_on_HTTPRequestPreview_request_completed"]
[connection signal="pressed" from="VBoxContainer/Label/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/HFlowContainer/SortNameButton" to="." method="_on_SortNameButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/HFlowContainer/SortNewestFirstButton" to="." method="_on_SortNewestFirstButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/HFlowContainer/SortOldestFirstButton" to="." method="_on_SortOldestFirstButton_pressed"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/DatapackSearch" to="." method="_on_DatapackSearch_text_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/HFlowContainer/DownloadModButton" to="." method="_on_DownloadModButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/PreviewTextureRect/OpenFullButton" to="." method="_on_OpenFullButton_pressed"]
[connection signal="meta_clicked" from="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/RichTextLabel" to="." method="_on_RichTextLabel_meta_clicked"]
[connection signal="pressed" from="FullTextureRect/CloseFullButton" to="." method="_on_CloseFullButton_pressed"]
